--- a/ETS_2/galery.html
+++ b/ETS_2/galery.html
@@ -21,7 +21,7 @@
         <button id="button" style="position: absolute; left: 560px; top: 90px;" ><a href="quest.html" >FAQ</a> </button>
         <button id="button" style="position: absolute; left: 620px; top: 90px;" ><a href="galery.html" >Галерея</a> </button>
         <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2" />
-        <h1 style="position: absolute; left: 50px; top: 140px;" >Галярея нашей игры</h1>
+        <h1 style="position: absolute; left: 50px; top: 140px;" >Галерея нашей игры</h1>
         <div class="image-container">
           <img src="images/screen10.png" style="position: absolute; left: 100px; top: 220px; width: 576px; height: 324px " alt="Изображение из игры">
         </div>
