--- a/ETS_2/about_us.html
+++ b/ETS_2/about_us.html
@@ -10,27 +10,26 @@
       <link rel='stylesheet' href='css/style.css'>
     </head>
   <body class="light">
-    <button id="theme-toggle" style="position: absolute; bottom: 50px; right: 40px">Сменить тему</button>
+    <button id="theme-toggle" style="position: absolute; top: 50px; right: 40px; font-size:20px">Сменить тему</button>
     <script src="script.js"></script>
-    <main>
+    <main class="content">
       <section>
-        <button id="button" style="position: absolute; left: 180px; top: 90px;" ><a href="index.html" >Главная</a> </button>
-        <button id="myBtn" style="position: absolute; left: 270px; top: 90px;" > <a href="news.html" >Новости</a></button>
-        <button id="myBtn" style="position: absolute; left: 360px; top: 90px;" > <a href="about_us.html" >О нас</a></button>
-        <button id="button" style="position: absolute; left: 430px; top: 90px;" ><a href="form.html" >Обратная связь</a> </button>
-        <button id="button" style="position: absolute; left: 560px; top: 90px;" ><a href="quest.html" >FAQ</a> </button>
-        <button id="button" style="position: absolute; left: 620px; top: 90px;" ><a href="galery.html" >Галерея</a> </button>
-        <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2" />
-        <h1 style="position: absolute; left: 50px; top: 140px;" >О нашей игре</h1>
-        <h2 style="position: absolute; top: 760px; left: 50px; width: 940px"  >Наша студия занимается разработкой игры Euro Truck Sumelator 2, в которой игрок доставляет грузу по странам Европы.</h2>
+            <button id="button" style="position: absolute; left: 180px; top: 50px; font-size: 18px"><a class ="button" href="index.html">Главная</a></button>
+            <button id="button" style="position: absolute; left: 310px; top: 50px; font-size: 18px"><a class ="button" href="news.html">Новости</a></button>
+            <button id="button" style="position: absolute; left: 440px; top: 50px; font-size: 18px"><a class ="button" href="about_us.html">О нас</a></button>
+            <button id="button" style="position: absolute; left: 550px; top: 50px; font-size: 18px"><a class ="button" href="faq.html">FAQ</a></button>
+            <button id="button" style="position: absolute; left: 650px; top: 50px; font-size: 18px"><a class ="button" href="galery.html">Галерея</a></button>
+        <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2"/>
+      </section>
+        <h1 style="position: absolute; left: 50px; top: 160px;">О нашей игре</h1>
+        <h2 style="position: absolute; top: 780px; left: 50px; width: 940px"  >Наша студия занимается разработкой игры Euro Truck Sumelator 2, в которой игрок доставляет грузу по странам Европы.</h2>
         <img src="images/screen6.png" style="position: absolute; left: 50px; top: 220px; width: 960px; height: 540px " alt="Изображение из игры">
-        <iframe style="position: absolute; right: 350px; top: 120px;" width="768" height="432" src="videos/Trailer1.mp4"></iframe>
-        <iframe style="position: absolute; right: 350px; bottom: 160px;" width="768" height="432" src="videos/Trailer2.mp4"></iframe>
+        <iframe style="position: absolute; right: 350px; top: 140px;" width="768" height="432" src="videos/Trailer1.mp4"></iframe>
+        <iframe style="position: absolute; right: 350px; bottom: 180px;" width="768" height="432" src="videos/Trailer2.mp4"></iframe>
       </section>
     </main>
     <footer>
-      <p style="position: absolute; bottom: 50px; left: 50px">&copy;Euro Truck Simulator 2025. Все права защищены.</p>
-      <p style="position: absolute; bottom: 20px; left: 50px">Связь с нами: SCS-help@scs.com</p>
+      © 2025 SCS Software. Все права защищены.
   </footer>
   </body>
   <script>
