--- a/ETS_2/galery.html
+++ b/ETS_2/galery.html
@@ -10,38 +10,31 @@
       <link rel='stylesheet' href='css/style.css'>
     </head>
   <body class="light">
-    <button id="theme-toggle" style="position: absolute; bottom: 50px; right: 40px">Сменить тему</button>
+    <button id="theme-toggle" style="position: absolute; top: 50px; right: 40px; font-size:20px">Сменить тему</button>
     <script src="script.js"></script>
-    <main>
+    <main class="content">
       <section>
-        <button id="button" style="position: absolute; left: 180px; top: 90px;" ><a href="index.html" >Главная</a> </button>
-        <button id="myBtn" style="position: absolute; left: 270px; top: 90px;" > <a href="news.html" >Новости</a></button>
-        <button id="myBtn" style="position: absolute; left: 360px; top: 90px;" > <a href="about_us.html" >О нас</a></button>
-        <button id="button" style="position: absolute; left: 430px; top: 90px;" ><a href="form.html" >Обратная связь</a> </button>
-        <button id="button" style="position: absolute; left: 560px; top: 90px;" ><a href="quest.html" >FAQ</a> </button>
-        <button id="button" style="position: absolute; left: 620px; top: 90px;" ><a href="galery.html" >Галерея</a> </button>
-        <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2" />
-        <h1 style="position: absolute; left: 50px; top: 140px;" >Галерея нашей игры</h1>
-        <div class="image-container">
-          <img src="images/screen10.png" style="position: absolute; left: 100px; top: 220px; width: 576px; height: 324px " alt="Изображение из игры">
-        </div>
-        <div class="image-container">
-          <img src="images/screen11.png" style="position: absolute; left: 100px; top: 650px; width: 576px; height: 324px " alt="Изображение из игры">
-        </div>
-        <div class="image-container">
-           <img src="images/screen12.png" style="position: absolute; left: 980px; top: 650px; width: 576px; height: 324px " alt="Изображение из игры">
-        </div>
-        <div class="image-container">
-          <img src="images/screen13.png" style="position: absolute; left: 1872px; top: 650px; width: 576px; height: 324px " alt="Изображение из игры">
-        </div>
-        <div class="image-container">
-          <img src="images/screen14.png" style="position: absolute; left: 1872px; top: 220px; width: 576px; height: 324px " alt="Изображение из игры">
-        </div>
+        <button id="button" style="position: absolute; left: 180px; top: 50px; font-size: 18px"><a class ="button" href="index.html">Главная</a></button>
+        <button id="button" style="position: absolute; left: 310px; top: 50px; font-size: 18px"><a class ="button" href="news.html">Новости</a></button>
+        <button id="button" style="position: absolute; left: 440px; top: 50px; font-size: 18px"><a class ="button" href="about_us.html">О нас</a></button>
+        <button id="button" style="position: absolute; left: 550px; top: 50px; font-size: 18px"><a class ="button" href="faq.html">FAQ</a></button>
+        <button id="button" style="position: absolute; left: 650px; top: 50px; font-size: 18px"><a class ="button" href="galery.html">Галерея</a></button>
+        <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2"/>
       </section>
+          <h1 style="position: absolute; top: 180px; left: 80px; font-size: 32">Наша галерея</h1>
+          <img id="main-image" src="images/screen10.png" alt="Main Image" style="position: absolute; left: 600px; top: 180px; width: 1280px; height: 720px;">
+          <div class="thumbnails" style="position: absolute; left: 100px; top: 930px; height: 220px; width: 2040px">
+            <img src="images/screen7.png" onclick="changeImage(this)" style="width: 320px; height: 180px">
+            <img src="images/screen10.png" onclick="changeImage(this)" style="width: 320px; height: 180px">
+            <img src="images/screen11.png" onclick="changeImage(this)" style="width: 320px; height: 180px">
+            <img src="images/screen6.png" onclick="changeImage(this)" style="width: 320px; height: 180px">
+            <img src="images/screen12.png" onclick="changeImage(this)" style="width: 320px; height: 180px">
+            <img src="images/screen14.png" onclick="changeImage(this)" style="width: 320px; height: 180px">
+            <img src="images/screen13.png" onclick="changeImage(this)" style="width: 320px; height: 180px">
+        </div>
     </main>
     <footer>
-      <p style="position: absolute; bottom: 50px; left: 50px">&copy;Euro Truck Simulator 2025. Все права защищены.</p>
-      <p style="position: absolute; bottom: 20px; left: 50px">Связь с нами: SCS-help@scs.com</p>
+      © 2025 SCS Software. Все права защищены.
   </footer>
   </body>
   <script>
