--- a/ETS_2/index.html
+++ b/ETS_2/index.html
@@ -11,17 +11,18 @@
       <title>Смена темы</title>
   </head>
   <body class="light">
-    <button id="theme-toggle" style="position: absolute; bottom: 50px; right: 40px">Сменить тему</button>
+    <button id="theme-toggle" style="position: absolute; top: 50px; right: 40px; font-size:20px">Сменить тему</button>
     <script src="script.js"></script>
-    <main>
+    <main class="content">
       <section>
-        <button id="button" style="position: absolute; left: 180px; top: 90px;" ><a href="index.html" >Главная</a> </button>
-        <button id="button" style="position: absolute; left: 270px; top: 90px;" > <a href="news.html" >Новости</a></button>
-        <button id="button" style="position: absolute; left: 360px; top: 90px;" > <a href="about_us.html" >О нас</a></button>
-        <button id="button" style="position: absolute; left: 430px; top: 90px;" ><a href="form.html" >Обратная связь</a> </button>
-        <button id="button" style="position: absolute; left: 560px; top: 90px;" ><a href="quest.html" >FAQ</a> </button>
-        <button id="button" style="position: absolute; left: 620px; top: 90px;" ><a href="galery.html" >Галерея</a> </button>
-        <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2" onclick="toggleDialog()" />
+        <section>
+          <button id="button" style="position: absolute; left: 180px; top: 50px; font-size: 18px"><a class ="button" href="index.html">Главная</a></button>
+          <button id="button" style="position: absolute; left: 310px; top: 50px; font-size: 18px"><a class ="button" href="news.html">Новости</a></button>
+          <button id="button" style="position: absolute; left: 440px; top: 50px; font-size: 18px"><a class ="button" href="about_us.html">О нас</a></button>
+          <button id="button" style="position: absolute; left: 550px; top: 50px; font-size: 18px"><a class ="button" href="faq.html">FAQ</a></button>
+          <button id="button" style="position: absolute; left: 650px; top: 50px; font-size: 18px"><a class ="button" href="galery.html">Галерея</a></button>
+          <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2" onclick="toggleDialog()" />
+        </section>
         <div id="modal_container" style="display: none">
           <div id="modal" style="position: absolute; left: 250px; bottom: 300px">
               <span class="closebtn" onclick="toggleDialog()" style="color: rgb(0, 0, 0); font-size: 16px">&times;</span>
@@ -29,14 +30,13 @@
                 Ну как там с деньгами?
               </p3>
           </div>
-      </div>
-        <h1 style="position: absolute; left: 180px; top: 110px">Добро пожаловать в мир игры!</h1>
-        <img src="images/screenshot1.png" alt="Скриншот" loading="lazy" style="position: absolute; left: 180px; top: 180px; width: 960px; height: 540px">
+        </div>
+        <h1 style="position: absolute; left: 180px; top: 200px; font-size: 28px">Добро пожаловать в мир игры!</h1>
+        <img src="images/screenshot1.png" alt="Скриншот" loading="lazy" style="position: absolute; left: 180px; top: 250px; width: 960px; height: 540px">
       </section>
     </main>
     <footer>
-      <p style="position: absolute; bottom: 50px; left: 50px">&copy;Euro Truck Simulator 2025. Все права защищены.</p>
-      <p style="position: absolute; bottom: 20px; left: 50px">Связь с нами: SCS-help@scs.com</p>
+      © 2025 SCS Software. Все права защищены.
   </footer>
   </body>
   <script>
