--- a/ETS_2/news.html
+++ b/ETS_2/news.html
@@ -11,41 +11,33 @@
       <title>Смена темы</title>
   </head>
   <body class="light">
-    <button id="theme-toggle" style="position: absolute; bottom: 50px; right: 40px">Сменить тему</button>
+    <button id="theme-toggle" style="position: absolute; top: 50px; right: 40px; font-size:20px">Сменить тему</button>
     <script src="script.js"></script>
-    <main>
+    <main class="content">
       <section>
-        <button id="button" style="position: absolute; left: 180px; top: 90px;" ><a href="index.html" >Главная</a> </button>
-        <button id="myBtn" style="position: absolute; left: 270px; top: 90px;" > <a href="news.html" >Новости</a></button>
-        <button id="myBtn" style="position: absolute; left: 360px; top: 90px;" > <a href="about_us.html" >О нас</a></button>
-        <button id="button" style="position: absolute; left: 430px; top: 90px;" ><a href="form.html" >Обратная связь</a> </button>
-        <button id="button" style="position: absolute; left: 560px; top: 90px;" ><a href="quest.html" >FAQ</a> </button>
-        <button id="button" style="position: absolute; left: 620px; top: 90px;" ><a href="galery.html" >Галерея</a> </button>
-        <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2" onclick="toggleDialog()" />
-        <div id="modal_container" style="display: none">
-          <div id="modal" style="position: absolute; left: 160px; top: 640px">
-              <span class="closebtn" onclick="toggleDialog()" style="color: white">Close</span>
-              <p2 style="color: white; position: absolute; left: 20px; top: 50px">
-                Ну как там с деньгами?
-              </p2>
-          </div>
-      </div>
+            <button id="button" style="position: absolute; left: 180px; top: 50px; font-size: 18px"><a class ="button" href="index.html">Главная</a></button>
+            <button id="button" style="position: absolute; left: 310px; top: 50px; font-size: 18px"><a class ="button" href="news.html">Новости</a></button>
+            <button id="button" style="position: absolute; left: 440px; top: 50px; font-size: 18px"><a class ="button" href="about_us.html">О нас</a></button>
+            <button id="button" style="position: absolute; left: 550px; top: 50px; font-size: 18px"><a class ="button" href="faq.html">FAQ</a></button>
+            <button id="button" style="position: absolute; left: 650px; top: 50px; font-size: 18px"><a class ="button" href="galery.html">Галерея</a></button>
+        <img id="Logo" src="images/logo.png" style="position: absolute; width: 100px; height: 100px; left: 33px; top: 40px;" title="Euro Truck Simulator 2"/>
+      </section>
         <section class="news">
           <article>
               <nav>
-                  <ul style = "width: 2500px; height: 1000px;">
-                        <h2 style="position: absolute; left: 50px; top: 150px;">Обновления игры</h2>
+                  <ul>
+                        <h2 style="position: absolute; left: 50px; top: 170px;">Обновления игры</h2>
                   </ul>
               </nav>
               <nav class = "Update 1.54">
                 <img src="images/update1.54.jpg" alt="Обновление 1.54" loading="lazy" style="position: absolute; left: 50px; top: 220px; width: 960px; height: 540px">
-                <h2 style="position: absolute; left: 50px; top: 755px; width: 960px; height: 200px">
+                <h2 style="position: absolute; left: 50px; top: 775px; width: 960px; height: 200px">
                   В обновлении 1.54 была введена новая фура бренда "SCANIA"
                 </h2>
               </nav>
               <nav class = "Update 1.53">
                 <img src="images/update1.53.jpg" alt="Обновление 1.53" loading="lazy" style="position: absolute; left: 1060px; top: 220px; width: 960px; height: 540px">
-                <h2 style="position: absolute; left: 1060px; top: 755px; width: 960px; height: 200px">
+                <h2 style="position: absolute; left: 1060px; top: 775px; width: 960px; height: 200px">
                   В обновлении 1.53 была введена новая фура бренда "DAF"
                 </h2>
               </nav>
@@ -64,10 +56,14 @@
   </div>
   </section>
     <footer>
-      <p style="position: absolute; bottom: 50px; left: 50px">&copy;Euro Truck Simulator 2025. Все права защищены.</p>
-      <p style="position: absolute; bottom: 20px; left: 50px">Связь с нами: SCS-help@scs.com</p>
+      © 2025 SCS Software. Все права защищены.
   </footer>
   </body>
+  <script>
+    window.onload = function() {
+document.getElementById('Logo').classList.add('show');
+};  
+</script>
 </html>
 
 
