--- a/ETS_2/about_us.html
+++ b/ETS_2/about_us.html
@@ -29,7 +29,7 @@
       </section>
     </main>
     <footer>
-      © 2025 SCS Software. Все права защищены.
+      <p style="font-size:18px">© 2025 SCS Software. Все права защищены.</p>
   </footer>
   </body>
   <script>
