--- a/ETS_2/faq.html
+++ b/ETS_2/faq.html
@@ -80,7 +80,7 @@
         </section>       
     </main>
     <footer>
-      © 2025 SCS Software. Все права защищены.
+        <p style="font-size:18px">© 2025 SCS Software. Все права защищены.</p>
     </footer>
 </body>
 <script>
