--- a/ETS_2/galery.html
+++ b/ETS_2/galery.html
@@ -34,7 +34,7 @@
         </div>
     </main>
     <footer>
-      © 2025 SCS Software. Все права защищены.
+      <p style="font-size:18px">© 2025 SCS Software. Все права защищены.</p>
   </footer>
   </body>
   <script>
