--- a/ETS_2/news.html
+++ b/ETS_2/news.html
@@ -56,7 +56,7 @@
   </div>
   </section>
     <footer>
-      © 2025 SCS Software. Все права защищены.
+      <p style="font-size:18px">© 2025 SCS Software. Все права защищены.</p>
   </footer>
   </body>
   <script>
