--- a/ETS_2/faq.html
+++ b/ETS_2/faq.html
@@ -55,7 +55,7 @@
           </div>
           <div class="faq-item" style="color: black">
             <h3 class="faq-question">Как установить Euro Truck Simulator 2?</h3>
-            <p class="faq-answer"></p>
+            <p class="faq-answer">В приложении "Steam", после покупки.</p>
         </div>
           <div class="faq-item" style="color: black">
               <h3 class="faq-question">Как быстро найти СТО?</h3>
